# RectangleIntersection

./: CMakeLists.txt  README.md
core/: CMakeLists.txt  jsoncpp.cpp  rectOperations.cpp  rectOperations.h  rectangle.h  utilities.h
core/json/: json-forwards.h  json.h
googletest/: CMakeLists.txt
solution/: CMakeLists.txt  js.json  main.cpp
unittests/: CMakeLists.txt  fixture.cpp  fixture.h  js.json
